src/core-crm/objects/Donation_Asset__c/Donation_Asset__c.object-meta.xml
<CustomObject>
    <description>Donation Asset captures information about non-monetary donations such Gift-In-Kind donations.</description>
    <label>Donation Asset</label>
    <nameField>
        <displayFormat>DA-{000000}</displayFormat>
        <label>Donation Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donation Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>