src/core-crm/objects/Donation_Asset__c/fields/Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Date__c</fullName>
    <description>The data the asset was acquired.</description>
    <inlineHelpText>The data the asset was acquired.</inlineHelpText>
    <label>Acquisition Date</label>
    <type>Date</type>
</CustomField>