src/core-crm/objects/Donation_Asset__c/fields/Acquisition_Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Estimated_Value__c</fullName>
    <description>Asset estimated value as at the acquisition date.</description>
    <inlineHelpText>Asset estimated value as at the acquisition date.</inlineHelpText>
    <label>Acquisition Estimated Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>