src/core-crm/objects/Donation_Asset__c/fields/Asset_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Asset_Creation_Date__c</fullName>
    <description>The date, approximate or exact, that the asset was created.</description>
    <inlineHelpText>The date, approximate or exact, that the asset was created.</inlineHelpText>
    <label>Asset Creation Date</label>
    <type>Date</type>
</CustomField>