src/core-crm/objects/Donation_Asset__c/fields/Asset_Creator_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Creator_Name__c</fullName>
    <description>The creator of the asset (where applicable).</description>
    <inlineHelpText>The creator of the asset (where applicable).</inlineHelpText>
    <label>Asset Creator Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>