src/core-crm/objects/Donation_Asset__c/fields/Asset_Name_Title__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name_Title__c</fullName>
    <description>The name/title of asset.</description>
    <inlineHelpText>The name/title of asset.</inlineHelpText>
    <label>Asset Name/Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>