src/core-crm/objects/Donation_Asset__c/fields/Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Number__c</fullName>
    <description>Unique identifier for the asset.</description>
    <inlineHelpText>Unique identifier for the asset.</inlineHelpText>
    <label>Asset Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>