src/core-crm/objects/Donation_Asset__c/fields/Asset_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Status__c</fullName>
    <description>Identifies if the asset has been sold or not.</description>
    <inlineHelpText>Identifies if the asset has been sold or not.</inlineHelpText>
    <label>Asset Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquired</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>