src/core-crm/objects/Donation_Asset__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <description>Classifies the type of asset.</description>
    <inlineHelpText>Classifies the type of asset.</inlineHelpText>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Art</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>