src/core-crm/objects/Donation_Asset__c/fields/Finance_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Finance_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Finance GL Account object.</description>
    <inlineHelpText>Lookup to Finance GL Account object.</inlineHelpText>
    <label>Finance GL Account</label>
    <referenceTo>Finance_GL_Account__c</referenceTo>
    <relationshipLabel>Donation Assets</relationshipLabel>
    <relationshipName>Donation_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>