src/core-crm/objects/Donation_Asset__c/fields/Sale_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sale_Amount__c</fullName>
    <description>Once sold by the university, this is the sale price of the asset.</description>
    <inlineHelpText>Once sold by the university, this is the sale price of the asset.</inlineHelpText>
    <label>Sale Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>