src/core-crm/objects/Donation_Asset__c/validationRules/Asset_Name_Title_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Asset_Name_Title_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR (
      ISNEW(),
      ISCHANGED( Asset_Name_Title__c )
    ),
    ISBLANK( Asset_Name_Title__c ))</errorConditionFormula>
    <errorDisplayField>Asset_Name_Title__c</errorDisplayField>
    <errorMessage>Please enter some valid input. Input is not optional.</errorMessage>
</ValidationRule>