src/core-crm/objects/Donation_Asset__c/validationRules/Asset_Type_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Asset_Type_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR (
      ISNEW(),
      ISCHANGED(Asset_Type__c)
    ),
    ISPICKVAL(Asset_Type__c, &apos;&apos;))</errorConditionFormula>
    <errorDisplayField>Asset_Type__c</errorDisplayField>
    <errorMessage>Please select a choice.</errorMessage>
</ValidationRule>